added svn kit support
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@108 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/ivy.xml
+++ b/ivy.xml
@@ -31,5 +31,7 @@
         <dependency org="commons-httpclient" name="commons-httpclient" rev="3.0" conf="compile"/>
         <dependency org="slide" name="webdavlib" rev="2.0" conf="compile"/>
         <dependency org="ch.qos.logback" name="logback-classic" rev="0.9.8" conf="compile"/>
+        <dependency org="org.tmatesoft.svnkit" name="svnkit" rev="1.1.6" conf="compile"/>
+        <dependency org="org.tmatesoft.svnkit" name="svnkit-javahl" rev="1.1.6" conf="compile"/>
     </dependencies>
 </ivy-module>
