Upgrade to new Groovy snapshot
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@202 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/ivy.xml
+++ b/ivy.xml
@@ -15,7 +15,7 @@
         <artifact conf="master"/>
     </publications>
     <dependencies defaultconfmapping="*->default">
-        <dependency org="org.codehaus.groovy" name="groovy-all" rev="1.5.5-SNAPSHOT" conf="compile">
+        <dependency org="org.codehaus.groovy" name="groovy-all" rev="1.5.5-032808" conf="compile">
             <exclude module="jline" conf="compile"/>
             <exclude module="junit" conf="compile"/>
         </dependency>
