Fixed build bug with not adding docs to the dists Fixed build bug with creating additional empty tutorial dir
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@575 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -118,11 +118,10 @@ explodedDistDir = new File(distsDir, 'exploded')
 explodedDistDocsDir = new File(explodedDistDir, 'docs')
 explodedDistJavadocsDir = new File(explodedDistDocsDir, 'javadoc')
 explodedDistSamplesDir = new File(explodedDistDir, 'samples')
-explodedDistTutorialDir = new File(explodedDistSamplesDir, 'tutorial')
 explodedDistUserguideOutputDir = new File(explodedDistSamplesDir, 'userguideOutput')
 
-createTask('explodedDist', dependsOn: 'libs') {
-    [explodedDistDir, explodedDistSamplesDir, explodedDistTutorialDir]*.mkdirs()
+createTask('explodedDist', dependsOn: ['libs', 'userguide', 'javadoc']) {
+    [explodedDistDir, explodedDistSamplesDir]*.mkdirs()
     File explodedDistBinDir = mkdir(explodedDistDir, 'bin')
     File explodedDistSrcDir = mkdir(explodedDistDir, 'src')
     File explodedDistLibDir = mkdir(explodedDistDir, 'lib')
@@ -158,7 +157,7 @@ createTask('explodedDist', dependsOn: 'libs') {
 zipRootFolder = "$archivesBaseName-${-> version}"
 
 dists {
-    dependsOn 'explodedDist', 'userguide', 'javadoc'
+    dependsOn 'explodedDist'
     childrenDependsOn = 'explodedDist'
     zip(classifier: 'all').afterDag {
         zipFileSet(dir: explodedDistDir, prefix: zipRootFolder) {
