svn merge -r624:625 https://svn.codehaus.org/gradle/gradle-core/branches/RB-0.2
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@582 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -159,7 +159,6 @@ zipRootFolder = "$archivesBaseName-${-> version}"
 
 dists {
     dependsOn 'explodedDist'
-    childrenDependsOn = 'explodedDist'
     zip(classifier: 'all').afterDag {
         zipFileSet(dir: explodedDistDir, prefix: zipRootFolder) {
             exclude 'bin/*'
@@ -192,7 +191,7 @@ dists {
             include 'gradlew'
         }
         zipFileSet(dir: projectDir, prefix: archiveName) {
-            include 'buildSrc/', 'gradle-wrapper/', 'lib/', 'src/', 'gradle.properties', 'gradlefile', 'gradlew.bat'
+            include 'buildSrc/', 'gradle-wrapper/', 'lib/', 'src/', 'gradle.properties', 'build.gradle', 'gradlew.bat'
         }
     }
 }
