--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 
 sourceCompatibility = 1.5
 targetCompatibility = 1.5
-// todo Actually it should be only groovy, but without junit we get a strange error. We have to understand this.
+// todo Actually it should be only groovy, but without junit we get a strange error. We need to understand this.
 groovyClasspath = {org.gradle.util.GradleUtil.groovyFiles}
 compile.groovyClasspath = org.gradle.util.GradleUtil.gradleClasspath 
 testCompile.groovyClasspath = org.gradle.util.GradleUtil.gradleClasspath
