--- a/build.gradle
+++ b/build.gradle
@@ -49,9 +49,6 @@ configureByDag {Dag dag ->
         javadocRemoteDir += 'latest'
     }
     manifest.mainAttributes([
-            (Attributes.Name.CLASS_PATH.toString()): dependencies.resolve('runtime').inject('') {
-                path, file -> path + file.name + ' '
-            },
             (Attributes.Name.IMPLEMENTATION_TITLE.toString()): 'Gradle',
             (Attributes.Name.IMPLEMENTATION_VERSION.toString()): version.toString()
     ])
@@ -68,7 +65,6 @@ dependencies {
         }
     }
     clientModule(['groovy'], ":groovy-all:1.5.5") {
-        dependency(":commons-cli:1.0")
         clientModule(":ant:1.7.0") {
             dependencies(":ant-junit:1.7.0@jar", ":ant-launcher:1.7.0")
         }
@@ -81,7 +77,8 @@ dependencies {
     dependency(['runtime'], ":ant-junit:1.7.0") {
         exclude(module: 'junit')
     }
-    compile ":logback-classic:0.9.8",
+    compile ":jopt-simple:2.4",
+            ":logback-classic:0.9.8",
             ":slf4j-api:1.4.3",
             ":logback-core:0.9.8",
             ":commons-io:1.3.1@jar",
