--- a/src/test/resources/org/gradle/wrapper/wrapper.properties
+++ b/src/test/resources/org/gradle/wrapper/wrapper.properties
@@ -4,4 +4,5 @@ zipStoreBase=testzipStoreBase
 distributionPath=testdistributionPath
 zipStorePath=testzipStorePath
 distributionName=testdistributionName
+distributionClassifier=testdistributionClassifier
 distributionVersion=testdistributionVersion
