Removed bug in build script for wrapper creation
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@626 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -378,7 +378,7 @@ createTask('release', dependsOn: ['uploadDists', 'uploadUserguide', 'uploadJavad
 }
 
 createTask('wrapper', type: Wrapper).configure {
-    gradleVersion = 'gradle-0.3-080710083849+0200-bin.zip'
+    gradleVersion = '0.3-080710083849+0200'
     zipBase = Wrapper.PathBase.PROJECT
     zipPath = 'wrapper'
     jarPath = zipPath
