Added jdk only property to launch4j wrapper.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@628 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -185,7 +185,7 @@ createTask('explodedDist', dependsOn: ['libs', 'userguide', 'javadoc']) {
             ant.launch4j() {
                 config(headerType: "console", outfile: "$explodedDistBinDir/gradle.exe",
                         dontWrapJar: "true", jarPath: "../lib/" + gradle_jar.archiveName) {
-                    jre(minVersion: "1.5.0")
+                    jre(minVersion: "1.5.0", jdkPreference: 'jdkOnly')
                 }
             }
         } catch (Exception e) {
