--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
+import groovy.text.SimpleTemplateEngine
 import java.text.DateFormat
 import java.text.SimpleDateFormat
 import java.util.jar.Attributes
+import org.apache.ivy.core.module.descriptor.Configuration
+import org.apache.ivy.core.module.descriptor.Configuration.Visibility
+import org.apache.tools.ant.taskdefs.condition.Os
+import org.gradle.api.Task
 import org.gradle.api.internal.dependencies.WebdavResolver
+import org.gradle.api.tasks.StopExecutionException
 import org.gradle.api.tasks.testing.ForkMode
 import org.gradle.api.tasks.wrapper.Wrapper
-import org.gradle.build.integtests.*
+import org.gradle.build.integtests.IntegTestSuite
 import org.gradle.build.release.Svn
 import org.gradle.build.release.Version
 import org.gradle.build.samples.WrapperProjectCreator
 import org.gradle.build.startscripts.StartScriptsGenerator
 import org.gradle.execution.Dag
 import org.gradle.util.GradleVersion
-import org.apache.ivy.core.module.descriptor.Configuration
-import org.apache.ivy.core.module.descriptor.Configuration.Visibility
-import groovy.text.SimpleTemplateEngine
-import org.gradle.api.tasks.StopExecutionException
-import org.apache.tools.ant.taskdefs.condition.Os
-import org.gradle.api.Task
 
 archivesBaseName = 'gradle'
 
@@ -79,6 +79,7 @@ dependencies {
             ":ivy:2.0.0.rc1_20080716132100_r677238@jar"
     runtime ":ant-launcher:1.7.0",
             ":ant-nodeps:1.7.0",
+            ":ant-trax:1.7.0",
             ":junit:4.4"
 
     def FIRST_LEVEL_JMOCK = [':hamcrest-core:1.1', ':hamcrest-library:1.1', ':jmock-junit4:2.4.0']
@@ -364,7 +365,7 @@ void windowsInstall() {
  * We can't use the Ant unzip task, as this task does not preserve the *nix file system permissions of the Gradle zip.
  */
 void asternixInstall() {
-    ant.exec(dir: gradle_installDir, executable: "unzip") {
+    ant.exec(executable: "unzip") {
         arg(value: '-q')
         arg(value: '-d')
         arg(value: gradle_installDir)
@@ -382,6 +383,8 @@ uploadDists {
         addArtifactPattern("$distributionUploadUrl/[artifact]-[revision](-[classifier]).[ext]" as String)
     }
 }
+
+createTask('developerBuild', dependsOn: ['clean', 'integTest'])
 
 createTask('release', dependsOn: ['uploadDists', 'uploadUserguide', 'uploadJavadoc']) {
     svn.release()
