Changed build.gradle to make it easier to rebuild the checked-in gradlew:     - Changed wrapper task to copy bin dist into appropriate location to be picked up by gradlew.     - Added rebuildWrapper convenience task to do a clean rebuild of bin dist and gradlew.
git-svn-id: http://svn.codehaus.org/gradle/gradle-core/trunk@679 004c2c75-fc45-0410-b1a2-da8352e2331b

--- a/build.gradle
+++ b/build.gradle
@@ -390,14 +390,21 @@ createTask('release', dependsOn: ['uploadDists', 'uploadUserguide', 'uploadJavad
     svn.release()
 }
 
-createTask('wrapper', type: Wrapper).configure {
-    gradleVersion = '0.3-080714185907+0200'
-    zipBase = Wrapper.PathBase.PROJECT
-    zipPath = 'wrapper'
-    jarPath = zipPath
+createTask('wrapper', type: Wrapper, dependsOn: ['init', 'archive_bin_zip']).doFirst { task ->
+    task.configure {
+        gradleVersion = version
+        zipBase = Wrapper.PathBase.PROJECT
+        zipPath = 'wrapper'
+        jarPath = zipPath 
+    }
 }
 
+wrapper.doLast {
+    def binDistZip = project.archive_bin_zip.archivePath
+    ant.copy(file: binDistZip, toDir: 'wrapper')
+}
 
+createTask('rebuildWrapper', dependsOn: ['clean', 'wrapper'])
 
 void ftp(Map args, Closure antFileset = {}) {
     ant {
